# diceprop

./: CHANGELOG.md  Cargo.toml  README.md  build.sh
examples_readme/: Cargo.toml
examples_readme/src/: lib.rs
src/: elem.rs  eval.rs  fun.rs  lib.rs  ops.rs  props.rs  set.rs  util.rs  var.rs  vars.rs
src/ops/: assert.rs  eq.rs  logic.rs  ord.rs
src/props/: algebra.rs  binop.rs  binrel.rs  fun.rs
